# sputnikvm-on-rux

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  default.nix
sinits/: Cargo.toml  Makefile
sinits/examples/: rlp.rs  sputnikvm.rs
src/: elastic_array.rs  hexutil.rs  lib.rs  memory.rs  params.rs  pc.rs  stack.rs  transaction.rs
src/bigint/: gas.rs  m256.rs  mi256.rs  mod.rs
src/bigint/hash/: mod.rs  rlp.rs
src/bigint/uint/: mod.rs  rlp.rs
src/commit/: account.rs  blockhash.rs
src/eval/: cost.rs  lifecycle.rs  mod.rs  util.rs
src/eval/run/: mod.rs  system.rs
src/patch/: mod.rs  precompiled.rs
src/rlp/: common.rs  compression.rs  error.rs  impls.rs  mod.rs  rlpin.rs  stream.rs  traits.rs  untrusted_rlp.rs
