[package]
name = "test-userspace"
version = "0.1.0"
authors = ["Wei Tang <hi@that.world>"]

[[example]]
name = "allocator"
crate-type = ["staticlib"]

[[example]]
name = "rlp"
crate-type = ["staticlib"]

[[example]]
name = "sputnikvm"
crate-type = ["staticlib"]

[dependencies.system]
path = "../rux/system"
features = ["kernel_debug"]

[dependencies.spin]
path = "../rux/spin"

[dependencies.selfalloc]
path = "../rux/selfalloc"

[dependencies.sputnikvm]
version = "0.7"
default-features = false
features = ["rust-secp256k1"]

[dependencies.etcommon-bigint]
version = "0.2"
default-features = false

[dependencies.etcommon-rlp]
version = "0.2"
default-features = false

[dependencies.etcommon-hexutil]
version = "0.2"
default-features = false

[dependencies.etcommon-block-core]
version = "0.1"
default-features = false